updated SecureFS FileService, added FileServiceClient