@@ -5,10 +5,12 @@
  */
 package at.tfr.securefs.client;
 
+import at.tfr.securefs.client.ws.FileService;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.URI;
+import java.net.URL;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
@@ -34,24 +36,25 @@ import org.joda.time.DateTime;
  *
  * @author Thomas Frühbeck
  */
-public class SecurefsClient implements Runnable {
+public class SecurefsFileServiceClient implements Runnable {
 
     private Options options = new Options();
-    String baseDir;
-    List<Path> files = new ArrayList<>();
-    boolean asyncTest = false;
-    int threads = 1;
+    private String fileServiceUrl = "http://localhost:8080/securefs/FileService?wsdl";
+    private List<Path> files = new ArrayList<>();
+    private boolean asyncTest = false;
+    private int threads = 1;
+
 
     {
-        options.addOption("b", true, "Base Directory of Server FileSystem");
+        options.addOption("u", true, "Service URL, default: "+fileServiceUrl);
         options.addOption("f", true, "Files to run to/from Server, comma separated list");
-        options.addOption("a", true, "Asynchronous tests");
-        options.addOption("t", true, "Number of concurrent Threads");
+        options.addOption("a", true, "Asynchronous tests, default: "+asyncTest);
+        options.addOption("t", true, "Number of concurrent Threads, default: "+threads);
     }
 
     public static void main(String[] args) throws Exception {
 
-        SecurefsClient client = new SecurefsClient();
+        SecurefsFileServiceClient client = new SecurefsFileServiceClient();
         try {
             client.parse(args);
 
@@ -68,14 +71,15 @@ public class SecurefsClient implements Runnable {
 
         } catch (Throwable e) {
             HelpFormatter hf = new HelpFormatter();
-            hf.printHelp(SecurefsClient.class.getSimpleName(), client.options);
+            hf.printHelp(SecurefsFileServiceClient.class.getSimpleName(), client.options);
             e.printStackTrace();
         }
     }
 
     public void run() {
         DateTime start = new DateTime();
-        try (FileSystem fs = FileSystems.newFileSystem(new URI(baseDir), null)) {
+        try {
+            FileService svc = new FileService(new URL(fileServiceUrl));
 
             for (Path path : files) {
 
@@ -84,26 +88,17 @@ public class SecurefsClient implements Runnable {
                     continue;
                 }
 
-                if (path.getParent() != null) {
-                    fs.provider().createDirectory(path.getParent());
-                }
-                Path sec = fs.getPath(path.toString()
-                        + (asyncTest ? "." + Thread.currentThread().getId() : ""));
-                final OutputStream secOs = Files.newOutputStream(sec);
+                System.out.println(Thread.currentThread()+": Sending file: "+ start + " : " + path);
 
-                System.out.println(Thread.currentThread()+": Sending file: "+ start + " : " + sec);
-
-                IOUtils.copyLarge(Files.newInputStream(path), secOs, new byte[128*1024]);
-                secOs.close();
+                svc.getFileServicePort().write(path.toString(), IOUtils.toByteArray(Files.newInputStream(path)));
 
                 Path out = path.getParent().resolve(path.getFileName()
                         + (asyncTest ? "." + Thread.currentThread().getId() : "") + ".out");
                 System.out.println(Thread.currentThread()+": Reading file: "+ new DateTime() + " : " + out);
                 Files.createDirectories(out.getParent());
 
-                final InputStream secIs = Files.newInputStream(sec);
-                IOUtils.copyLarge(secIs, Files.newOutputStream(out), new byte[128*1024]);
-                secIs.close();
+                byte[] arr = svc.getFileServicePort().read(path.toString());
+                IOUtils.write(arr, Files.newOutputStream(out));
 
                 long inputChk = FileUtils.checksumCRC32(path.toFile());
                 long outputChk = FileUtils.checksumCRC32(out.toFile());
@@ -122,7 +117,7 @@ public class SecurefsClient implements Runnable {
     public void parse(String[] args) throws ParseException {
         CommandLineParser clp = new DefaultParser();
         CommandLine cmd = clp.parse(options, args);
-        baseDir = cmd.getOptionValue("b");
+        fileServiceUrl = cmd.getOptionValue("u", fileServiceUrl);
         Arrays.stream(cmd.getOptionValue("f").split(",")).forEach(f -> files.add(Paths.get(f)));
         asyncTest = Boolean.parseBoolean(cmd.getOptionValue("a", "false"));
         threads = Integer.parseInt(cmd.getOptionValue("t", "1"));
